<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" 
    android:id="@+id/registration_main_layout"
    android:layout_marginBottom="-30dp">

    <LinearLayout
        android:id="@+id/whitebox_reg"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:alpha="0.9"
        android:background="@drawable/whitebox"
        android:orientation="vertical" >

        	<EditText 
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    style= "@style/WhiteBoxEditTextStyle"
        	    android:inputType="textPersonName"
        	    android:id="@+id/registration_1_name"
        	    android:hint="@string/registration_1_name"
        	    android:ellipsize="start"
    			android:gravity="center_horizontal"
    			android:layout_marginBottom="10dp"
        	    android:layout_marginTop="10dp"
        	    />
        	<LinearLayout 
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:orientation="horizontal"
        	    android:layout_marginBottom="10dp">
        	    
        	    <EditText 
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:layout_marginRight="4dp"
        	        android:text="@string/plus"
        	        android:id="@+id/registration_1_plus"
        	        android:editable="false"
        	        android:ellipsize="start"
    				android:gravity="center_horizontal"
        	    />
        	    
        	    
        	    <EditText 
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    style= "@style/WhiteBoxEditTextStyle"
        	    android:hint="@string/registration_1_mobile"
        	    android:inputType="phone"
        	    android:id="@+id/registration_1_mobile"
        	    android:paddingLeft="50dp"/>
<!--         	    android:ellipsize="start" -->
<!--     			android:gravity="center_horizontal"/> -->
        	    
        	    
        	    
        	</LinearLayout>
        	
        	<EditText 
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    style= "@style/WhiteBoxEditTextStyle"
        	    android:hint="@string/registration_1_personal_mail"
        	    android:inputType="textWebEmailAddress"
        	    android:id="@+id/registration_1_personal_mail"
        	    android:ellipsize="start"
    			android:gravity="center_horizontal"
        	    android:layout_marginBottom="10dp"
        	    />
        	
        	
        	<EditText 
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    style= "@style/WhiteBoxEditTextStyle"
        	    android:hint="@string/registration_1_company_mail"
        	    android:inputType="textWebEmailAddress"
        	    android:id="@+id/registration_1_company_mail"
        	    android:ellipsize="start"
    			android:gravity="center_horizontal"
    			android:layout_marginBottom="10dp"
        	    />
        	<EditText 
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    style= "@style/WhiteBoxEditTextStyle"
        	    android:hint="@string/registration_1_password"
        	    android:password="true"
        	    android:id="@+id/registration_1_password"
        	    android:ellipsize="start"
    			android:gravity="center_horizontal"
    			android:layout_marginBottom="15dp"
        	    
        	    />

        	<RadioButton
        	    android:id="@+id/radioButton1"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="Male" />
        
    </LinearLayout>
    
    
    <LinearLayout
         android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_below="@id/whitebox_reg"
        android:layout_marginTop="10dp"
        
        
         >

        <Button
            android:id="@+id/facebook"
            style="@style/myRegistrationTransparentButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/facebook" />
    
    <Button
        android:id="@+id/linked_in"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:text="@string/linked_in" 
        style="@style/myRegistrationTransparentButton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:alpha="0.75"
        />
    </LinearLayout>

    
    <LinearLayout 
        android:id="@+id/bottom_buttons_layout"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        	<Button 
        	    android:id="@+id/login"
        	    android:layout_height="wrap_content"
        	    android:layout_width="match_parent"
        	    android:layout_weight="1"
        	    android:layout_marginRight="30dp"
        	    android:layout_marginLeft="10dp"
        	    android:text="@string/login"
        	    style= "@style/myRegistrationBottomButton"/>
        	
        	<View
			    android:layout_width="1dp"
			    android:layout_height="fill_parent"
			    android:background="@color/white"
			    android:layout_marginBottom="7dp"
			    />
        	
        	<Button 
        	    android:id="@+id/next"
        	    android:layout_height="wrap_content"
        	    android:layout_width="match_parent"
        	    android:layout_weight="1"
        	    android:layout_marginRight="30dp"
        	    android:layout_marginLeft="10dp"
        	    android:text="Register"
        	    style= "@style/myRegistrationBottomButton"/>
        
        
    </LinearLayout>

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/whitebox_reg"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:text="Female" />

</RelativeLayout>