<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/driver_contact_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rect_contact_relative" >
        
        <RelativeLayout 
            android:id="@+id/profile_relative_layout"
            android:layout_height="match_parent"
            android:layout_width="90dp"
           android:background="@color/apptheme_color"
            >
        
           <Button
        android:id="@+id/contact_profile_pic"
        android:layout_width="60dp"
        android:layout_height="65dp"
        android:layout_centerInParent="true"
        android:background="@drawable/pic_1"
         />
           

          </RelativeLayout>
           
        <TextView
            android:id="@+id/informal_text_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/profile_relative_layout"
            android:text="@string/informal_going_with" 
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/apptheme_color"
            android:textSize="12sp"
            />   
           
        <TextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:layout_below="@id/informal_text_textview"
            android:layout_alignLeft="@id/informal_text_textview"
            android:text="@string/contact_name" 
            
           

            />

        <TextView
            android:id="@+id/company_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/name_textview"
            android:layout_below="@id/name_textview"
          	android:text="@string/contact_company" 
            />

            
       

        <TextView
            android:id="@+id/contact_no_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/name_textview"
            android:layout_below="@id/company_name_textview"
            android:text="@string/contact_contact_no" 
              />
        

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/driver_contact_view_triangle_white"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/driver_contact_view"
        android:layout_marginRight="20dp"
        android:layout_marginTop="-3dp"
        android:background="@drawable/tri_white_contact_relative" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/driver_contact_view_triangle_white_2"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_below="@id/driver_contact_view"
        android:background="@drawable/tri_white_contact_relative" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/driver_contact_view_triangle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
     	android:layout_below="@id/driver_contact_view"
        android:background="@drawable/tri_contact_relative" >
    </RelativeLayout>

 

</RelativeLayout>
